pom.xml: Selenium 4 version bumped to use beta4